BFE_RShiny/flamingo/inst/app/www/css/flamingo-tweaks.css
/*** General ***/

/* CSS class to format checkboxinputgroups into 6 columns */

.h5-align {
  margin-top: 14px;
  margin-bottom: 0px;
}

.multicol {
  -webkit-column-count: 6; /* Chrome, Safari, Opera */
  -moz-column-count: 6; /* Firefox */
  column-count: 6;
}

h3.flamingo-page-title {
  margin-top: 3em;
  text-align: center;
}

h4.flamingo-table-title {
  text-align: left;
  display: block;
}

h4.flamingo-loss {
  font-size: 18px;
  font-weight: bold;
}

h5.flamingo-measure {
  font-size: 16.5px;
}

h6.flamingo-granularity {
  font-size: 15px;
}

em.flamingo-footer {
  color: gray;
  font-size: 10pt;
  margin-left: 5%;
}

em.rshiny-footer {
  color: gray;
  font-size: 10pt;
  float: right;
  margin-right: 2%;
}

div.flamingo-page-division {
  margin-top: 2em;
  /* border: 1px solid #e3e3e3; */
  padding: 20px;
  border-radius: 4px;
  margin-left: auto;
  margin-right: auto;
  max-width: 1600px;
}

.btn {
  margin-bottom: 5px !important;
}

.flamingo-page-wrap {
  max-width: 1000px;
}

.datatables {
  margin-bottom: 1em;
}

.tab-content {
  padding-top: 1em;
}

/*** Modal Windows ***/

/***
.modal-footless .modal-footer {
  display: none;
}
***/

/*** Login ***/

.login-dialog {
  padding: 1em;
}

.login-dialog img {
  margin-bottom: 3em;
}

.login-dialog input {
  margin-bottom: 1em;
  font-size: 14pt;
  display: block;
}

.login-dialog button {
  margin-top: 1em;
  margin-bottom: 1em;
}

/*** File Viewer ***/

#fileViewer-plainmap {
  height: calc(100vh - 230px) !important;
}

#FVPanelSwitcher {
  color: rgba(0, 0, 0, 0);
  background-color: rgba(0, 0, 0, 0);
  font-size: 1%;
  height: 1px;
  border-style: none;
}


/*** Notifications ***/

.shiny-notification-side {
  display: inline-block;
  margin-right: 10px;
  font-size: 24px;
  vertical-align: top;
}

.shiny-notification-main {
  display: inline-block;
  width: 170px;
  margin-top: 5px;
}

.shiny-notification-error {
  background: linear-gradient(to bottom, #dc6462 0%, #a94442 100%);
  border: 1px solid #994442;
  min-height: 100px;
  color: #fff;
}

.shiny-notification-warning {
  background: linear-gradient(to bottom, #fff 0%, #dcdcdc 100%);
  border: 1px solid #979797;
}

.shiny-notification-message {
  background: linear-gradient(to bottom, #fff 0%, #dcdcdc 100%);
  border: 1px solid #979797;
}

/* Tabs Panels */
.nav-tabs > li > a{
  color: #000;
}

.nav-tabs > li > a:hover {
  border-color: #eeeeee #eeeeee #dddddd;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
  color: #8b0000;
  background-color: #ffffff;
  border: 1px solid #dddddd;
  border-bottom-color: transparent;
  cursor: default;
}

/* Slider styles */
.irs-grid-pol.small {
  height: 0px !important;
}

.irs-grid-pol {
  display: none !important;
}

.irs-single, .irs-bar-edge, .irs-bar {
  background: #8b2129 !important;
  border:#8b2129 !important;
}

.InlineSelectInput label.control-label, .InlineSelectInputSmall label.control-label, .InlineSelectInput .selectize-control.single, .InlineSelectInputSmall .selectize-control.single {
         display: table-cell;
         text-align: center;
         vertical-align: middle;
}

.InlineSelectInput  label.control-label, .InlineSelectInputSmall  label.control-label {
        padding-right: 10px;
}

.InlineSelectInput .form-group, .InlineSelectInputSmall .form-group {
        display: table-row;
}

.InlineSelectInput .selectize-input {
        width: 300px;
}

.InlineSelectInputSmall .selectize-input {
        width: 80px;
}


.InlineSelectInput.selectize-control.single div.item, .InlineSelectInputSmall.selectize-control.single div.item {
        padding-right: 15px;
}

.InlineTextInput label{
        display: table-cell;
        text-align: center;
        vertical-align: middle;
        padding-right: 10px;
}

.InlineTextInput .form-group {
        display: table-row;
}


/* Button to collapse flamingo panels */
.collapsebtn:after {
  font-family: "FontAwesome"; font-weight: 900; content: "\f068";
  float: right;
}

.collapsebtn.collapsed:after {
  content: "\f065";
}

.btn-dropdown {
  width: 100%;
  color: #ffffff;
  background-color: #8b2129;
  border-color: #8b2129;
}

#pagestructure-abuttonanalysis.btn-dropdown {
  background-image: -webkit-linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  background-image: -o-linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  background-image: -webkit-gradient(linear, left top, left bottom, from(#d41f29), color-stop(50%, #8b2129), to(#8b2129));
  background-image: linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d94bf', endColorstr='#ff3e648d', GradientType=0);
  -webkit-filter: none;
          filter: none;
  border: 1px solid #8b2129;
}

#pagestructure-abuttonanalysis.btn-dropdown:hover {
  background-image: -webkit-linear-gradient(#87474c, #8b2129 50%, #8b2129);
  background-image: -o-linear-gradient(#87474c, #8b2129 50%, #8b2129);
  background-image: -webkit-gradient(linear, left top, left bottom, from(#87474c), color-stop(50%, #8b2129), to(#8b2129));
  background-image: linear-gradient(#87474c, #8b2129 50%, #8b2129);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5f8ab9', endColorstr='#ff385a7f', GradientType=0);
  -webkit-filter: none;
          filter: none;
  border: 1px solid #2e4b69;
}

#pagestructure-abuttonbrowse.btn-dropdown {
  background-image: -webkit-linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  background-image: -o-linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  background-image: -webkit-gradient(linear, left top, left bottom, from(#d41f29), color-stop(50%, #8b2129), to(#8b2129));
  background-image: linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d94bf', endColorstr='#ff3e648d', GradientType=0);
  -webkit-filter: none;
          filter: none;
  border: 1px solid #8b2129;
}
#pagestructure-abuttonbrowse.btn-dropdown:hover {
  background-image: -webkit-linear-gradient(#87474c, #8b2129 50%, #8b2129);
  background-image: -o-linear-gradient(#87474c, #8b2129 50%, #8b2129);
  background-image: -webkit-gradient(linear, left top, left bottom, from(#87474c), color-stop(50%, #8b2129), to(#8b2129));
  background-image: linear-gradient(#87474c, #8b2129 50%, #8b2129);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5f8ab9', endColorstr='#ff385a7f', GradientType=0);
  -webkit-filter: none;
          filter: none;
  border: 1px solid #2e4b69;
}

#singleAna-workflowsteps-radiobuttons button {
  background-image: none;
  border-radius: 9999px; /* circular border */
  color: #000000bf;
  border: 1px solid #8b2129;
  text-shadow: none;
}

#singleAna-workflowsteps-radiobuttons button.previousStepButton {
  background-color: #eacbcb;
  color: #3d3f3f;
}

#singleAna-workflowsteps-radiobuttons button.activeStepButton {
  background-color: #bb252c;
  background-image: linear-gradient(#d41f29, #8b2129 50%, #8b2129);
  color: #ffffff;
  font-weight: bold;
}

#singleAna-workflowsteps-radiobuttons button.nextStepButton {
  background-color: #ffffff;
  color: #8b2129;
}

/*Remove Browse Checkbox */
input[type="checkbox"] {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

/*Default text color */
input[type="checkbox"] + span {
   color:black;
}

/* Custom checkbox, including a check icon with transparent color,
to become visible when checked */
input[type="checkbox"] + span:before {
  font-family: "FontAwesome";
  content: '\f00c';
  color: transparent;
  font-size: 10px;
  display: inline-block;
  height: 16px;
  width: 16px;
  text-align: center;
  margin-right: 6px;
  border: 1px solid black;
  border-radius: 2px;
  background-color: white;
  cursor: default;
}

/* Custom checkbox text color when checked */
input[type="checkbox"]:checked + span {
   color: #8b2129;
}
/* Checkbox icon visible with the desired color when checked */
input[type="checkbox"]:checked + span:before {
  color: #8b2129;
}

/* Custom checkbox text color when disabled */
input[type="checkbox"]:disabled + span {
   color:#999;
}
/* Checkbox style when disabled */
input[type="checkbox"]:disabled + span:before {
  border: 1px solid #333;
  background-color:#999;
  cursor: no-drop;
}
/* Remove browser radio */
input[type="radio"] {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

/* Default radio text style */
input[type="radio"] + span{
  color: black;
  position: relative;
  padding-left: 22px;
  display: inline-block;
  line-height: 14px; /* controls vertical alignment */
}
/* Checked radio text style */
input[type="radio"]:checked + span{
  color: #8b2129;
}

/* Custom radio button */
[type="radio"] + span:before {
    content: '';
    position: absolute;
    left: 0;
    width: 14px;
    top: 0;
    height: 14px;
    border: 1px solid black;
    border-radius: 9999px; /* circle */
    background: #fff;
}
[type="radio"] + span:after {
    content: '';
    left: 3px;
    width: 8px;
    top: 3px;
    height: 8px;
    background: transparent; /* transparent by default */
    position: absolute;
    border-radius: 9999px; /* circle */

}
/* Radio button selection circle with actual color when checked */
[type="radio"]:checked + span:after {
    background: #8b2129;
}

.checkbox label, .radio label, .checkbox-inline, .radio-inline {
  padding-left: 0; /* controls indention */
}

